# drift

./: .gitignore  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  REUSE.toml  SECURITY.md
drift-lab/src-tauri/: Cargo.toml  tauri.conf.json
drift-lab/src-tauri/capabilities/: default.json
drift-lab/src-tauri/icons/: icon.icns
drift-lab/src-tauri/src/: app_config.rs  backend.rs  commands.rs  events.rs  history.rs  lib.rs  local_server.rs  model_config.rs  model_discovery.rs  persisted.rs  presets.rs  scan_commands.rs  secret_store.rs  state.rs  telemetry.rs  user_input.rs
drift-lab/src-tauri/src/agent/: openai.rs  tools.rs  workflow.rs
drift-lab/src-tauri/src/agent_tools/: find_image.rs  mod.rs
drift-lab/src-tauri/src/scan/: suggester.rs
drift-lab/src-tauri/src/tools/: analyze_samples.rs  ask_user.rs  copy_to_container.rs  detect_runtime.rs  drive_load.rs  exec_in_container.rs  find_image.rs  install_profiler.rs  list_containers.rs  mod.rs  persist_run.rs  run_profiling.rs
drift-lab/src-tauri/tests/: agent_workflow.rs
drift-static-profiler/: .gitignore  ARCHITECTURE.md  Cargo.toml  INSIGHTS_PLAN.md  Makefile
drift-static-profiler/schema/: profile.schema.json
drift-static-profiler/src/: api.rs  categories.rs  diff.rs  graph.rs  insights.rs  lib.rs  linguist.rs  main.rs  metrics.rs  pagerank.rs  parser.rs  progress.rs  report.rs  roots.rs  scans_index.rs  tags.rs  tree.rs  walker.rs
drift-static-profiler/tests/: integration.rs
drift-static-profiler/tests/fixtures/go-gin/: go.mod
drift-static-profiler/tests/fixtures/kotlin-ktor/: build.gradle.kts
drift-static-profiler/tests/fixtures/rust-axum/: Cargo.toml
drift-static-profiler/tests/fixtures/scala-play/: build.sbt
drift-static-profiler/tests/fixtures/typescript-nestjs/: .gitignore  package.json  tsconfig.json
drift-static-profiler/viewer/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
drift-static-profiler/viewer/public/fixtures/: custom.json  go-gin.json  insights-demo.json  java-spring.json  javascript-express.json  roots.json  (+4 more)
drift-static-profiler/viewer/src/: App.tsx  CallTreeView.tsx  DetailsPane.tsx  FlameView.tsx  Help.tsx  HotPaths.tsx  Insights.tsx  RootsView.tsx  Router.tsx  ScanReport.tsx  Smells.tsx  Statistics.tsx  SummaryBar.tsx  fixtures.ts  main.tsx  tooltips.ts  transform.ts  types.ts  userScans.ts
(+78 files in other folders)
