[package]
name = "drift-lab"
version = "0.1.0"
description = "Drift Lab — desktop app for profiling Dockerized services"
authors = ["refactor-labs"]
license = "MIT"
repository = "https://github.com/refactor-labs-pub/drift"
edition = "2021"
rust-version = "1.77"

[lib]
name = "drift_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"

# Async + Docker
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
bollard = "0.17"
futures-util = "0.3"

# LLM agent (API + local llama-server). llama-server -hf handles the GGUF
# download itself, so we don't need hf-hub directly.
rig-core = "0.35"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tauri-plugin-store = "2"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

# Misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
# enables custom protocol assets when building for production
custom-protocol = ["tauri/custom-protocol"]
